--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "bootstrap": "^5.3.1",
     "live-server": "^1.2.2",
     "sass": "^1.66.1"
+  },
+  "devDependencies": {
+    "jsdoc": "^4.0.2"
   }
 }
