--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "build": "^0.1.4",
     "live-server": "^1.2.2",
     "sass": "^1.66.1"
   },
