--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "build": "^0.1.4",
+    "eslint": "^8.49.0",
     "live-server": "^1.2.2",
+    "prettier": "^3.0.3",
     "sass": "^1.66.1"
   }
 }
