--- a/package.json
+++ b/package.json
@@ -16,5 +16,17 @@
     "live-server": "^1.2.2",
     "prettier": "^3.0.3",
     "sass": "^1.66.1"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix --cache"
+    ],
+    "*.html": [
+      "prettier --write"
+    ],
+    "*.scss": [
+      "prettier --write"
+    ]
   }
 }
