--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "lint-staged": {
     "*.js": [
       "prettier --write",
-      "eslint --fix --cache"
+      "eslint --fix --cacnpmhe"
     ],
     "*.html": [
       "prettier --write"
